    Implemented pass summary pop-up when mouse hovers over a pass. Works like
    tooltips.
    Turn off anitialias for rectangles to make them look sharper.
    Increase transparency of fill color.

    * src/sat-cfg.c:
    Changed default value of SKY_AT_GLANCE/COLOUR_07 to be darker.

    * src/gtk-polar-view.c:
    Added satellite tooltips showing current Az, El and time to LOS.


2010-07-11 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata:
    Synchronise satellite database with Celestrak.
    
    * src/gtk-rig-ctrl.c:
    Simplified exec_toggle_tx_cycle() to only do something while PTT=FALSE and
    without any dial feedback since dial feedback makes no sense when using 
    such radios.
    Added function to set_ptt().
    Implemented controller for RIG_TYPE_ROGGLE_MAN (FT-817/857/897 manual TX).

    * src/gtk-rig-ctrl.c:
    * src/gtk-rig-ctrl.h:
    Updated RIG_TYPE_TOGGLE_AUTO controller to perform TX frequency update only
    once every 10 seconds.
    
    * src/sat-pref-rig-editor.c:
    Automatically set PTT type for RIG_TYPE_TOGGLE_AUTO and RIG_TYPE_TOGGLE_MAN.


2010-07-09 Alexandru Csete <oz9aec at gmail.com>

    * src/radio-conf.h:
    * src/sat-pref-rig.c:
    * src/sat-pref-rig-editor.c:
    * src/gtk-rig-ctrl.c:
    Added option for manual T/R switch for FT-817/857/897 (RIG_TYPE_TOGGLE_MAN).
    The auto mode has been renamed to RIG_TYPE_TOGGLE_AUTO.
    
    * data/trsp/36122.trsp:
    Fixed incorrect V/U packet frequencies.

    * data/trsp/32791.trsp:
    Fixed incorrect frequency and added more modes.


2010-06-18 Alexandru Csete <oz9aec at gmail.com>

    * src/main.c:
    Applied patch 3009725: Delete Explicit Call to gtk_set_locale.
    
    * src/gtk-sat-data.[ch]:
    Added function to free satellite name, nickname and website (patch 3009727).
    
    * src/gtk-sat-module.c:
    Use new gtk_sat_data_free_sat() function (patch 3009727).
    

2010-05-23 Alexandru Csete <oz9aec at gmail.com>

    * src/print-pass.h: